added search functionality and data displays

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -5,10 +5,13 @@
 }
 
 .jumbotron {
-    background-color: #e4000f;
     margin: auto;
 }
 
-* {
-    background-color: #e4000f;
+footer {
+    color: #444444;
+}
+
+body {
+    background-color: #E4000F;
 }
